Added new add on

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<a href="ADDON_ID_HERE-VERSION_NUMBER_HERE.zip">ADDON_ID_HERE-VERSION_NUMBER_HERE.zip</a>
+<a href="plugin.program.openwizard-1.4.9.zip">plugin.program.openwizard-1.4.9.zip</a>
